// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI-WORKBENCH Portfolio|Pages page 1 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  min-width: 227px;
}

.emotion-6 img {
  margin: 0 30px 0 9px;
  max-height: 33px;
  max-width: 33px;
}

.emotion-6:hover {
  background: rgba(255,255,255,0.15);
}

.emotion-7 {
  position: relative;
}

.emotion-7:hover {
  -webkit-transition: background .4s ease-out;
  transition: background .4s ease-out;
  background: #4176FB;
}

.emotion-7 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  line-height: 100px;
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  padding-left: 30px;
  color: #fff;
}

.emotion-7 a img {
  margin: 0 30px 0 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-10 {
  position: relative;
}

.emotion-10:hover {
  -webkit-transition: background .4s ease-out;
  transition: background .4s ease-out;
  background: #44546A;
}

.emotion-10 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  line-height: 100px;
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  padding-left: 30px;
  color: #fff;
}

.emotion-10 a img {
  margin: 0 30px 0 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-13 {
  position: relative;
}

.emotion-13:hover {
  -webkit-transition: background .4s ease-out;
  transition: background .4s ease-out;
  background: #9EC4E7;
}

.emotion-13 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  line-height: 100px;
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  padding-left: 30px;
  color: #fff;
}

.emotion-13 a img {
  margin: 0 30px 0 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-16 {
  position: relative;
}

.emotion-16:hover {
  -webkit-transition: background .4s ease-out;
  transition: background .4s ease-out;
  background: #F1618C;
}

.emotion-16 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  line-height: 100px;
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  padding-left: 30px;
  color: #fff;
}

.emotion-16 a img {
  margin: 0 30px 0 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-26 {
  padding: 94px;
  padding-top: 194px;
  min-height: 900px;
  position: relative;
  z-index: 10;
}

.emotion-26 .emotion-3 {
  max-width: 290px;
}

.emotion-26 img.whitewash {
  position: absolute;
  right: 0;
  bottom: 0;
  height: 100%;
  z-index: -1;
}

.emotion-0 {
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 51px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
}

.emotion-2 {
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 28px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  color: #000;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-24 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: rgba(255,255,255,0.4);
  height: 100px;
}

.emotion-24 .emotion-3 {
  margin-top: 240px;
  margin: 0 auto;
  opacity: 0.4;
}

.emotion-24 img {
  max-width: 40px;
  margin: 1em auto;
}

.emotion-28 {
  min-height: 1800px;
}

<div
  className="emotion-28 emotion-29"
>
  <div
    className="emotion-26 emotion-27"
  >
    <section
      className="emotion-4 emotion-5"
    >
      <h1
        className="emotion-0 emotion-1"
      >
        Hi,
      </h1>
      <h3
        className="emotion-2 emotion-3"
      >
        I'm a UX Engineer with 10 years experience in bringing together designers and developers to create amazing web apps.
      </h3>
    </section>
    <section
      className="emotion-20 emotion-21"
    >
      <div
        className="emotion-18 emotion-19"
      >
        <span
          style={
            Object {
              "fontSize": 0,
            }
          }
        />
        <div
          className="emotion-6 emotion-7 emotion-8"
        >
          <a
            href="https://www.behance.net/rchaumard25b7"
            light="true"
            target="_blank"
          >
            <img
              src={Object {}}
            />
            behance
          </a>
          <div
            className="highlight"
          />
        </div>
        <div
          className="emotion-6 emotion-10 emotion-8"
        >
          <a
            href="https://dr-dyne.tumblr.com/tagged/sketch"
            light="true"
            target="_blank"
          >
            <img
              src={Object {}}
            />
            tumblr
          </a>
          <div
            className="highlight"
          />
        </div>
        <div
          className="emotion-6 emotion-13 emotion-8"
        >
          <a
            href="https://linkedin.com/in/ryc"
            light="true"
            target="_blank"
          >
            <img
              src={Object {}}
            />
            linked in
          </a>
          <div
            className="highlight"
          />
        </div>
        <div
          className="emotion-6 emotion-16 emotion-8"
        >
          <a
            href="https://github.com/drdyne"
            light="true"
            target="_blank"
          >
            <img
              src={Object {}}
            />
            github
          </a>
          <div
            className="highlight"
          />
        </div>
      </div>
    </section>
    <div
      className="emotion-24 emotion-25"
    >
      <h3
        className="emotion-2 emotion-3"
      >
        Read more
      </h3>
      <img
        src={Object {}}
      />
    </div>
    <img
      className="whitewash"
      src={Object {}}
    />
  </div>
</div>
`;

exports[`UI-WORKBENCH Portfolio|Pages page 2 1`] = `
.emotion-0 {
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 28px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  color: #000;
}

.emotion-16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background: #F1618C;
  min-height: 900px;
}

.emotion-16 .emotion-1 {
  color: #fff;
  max-width: 290px;
  margin-top: 240px;
  margin: 240px 0 0 94px;
  z-index: 1;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  z-index: 1;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 560px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  min-height: 1000px;
}

@media (min-width:740px) {
  .emotion-10 {
    padding-left: 200px;
  }

  .emotion-10 > div:first-of-type {
    margin-top: 240px;
    margin-bottom: -50px;
  }

  .emotion-10 img.react-logo {
    padding-left: 300px;
    margin-top: -240px;
  }
}

.emotion-4 {
  -webkit-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
  position: relative;
  display: block;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.25);
  -webkit-perspective: 20px;
  -moz-perspective: 20px;
  -ms-perspective: 20px;
  perspective: 20px;
  z-index: 2;
  width: 100%;
  max-width: 686px;
  height: 363px;
  margin-top: 94px;
  background: #ffffff;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.25);
}

.emotion-4 img {
  width: 100%;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-4 .label {
  font-family: Encode Sans;
  font-size: 28px;
  font-weight: bold;
  -webkit-letter-spacing: 10px;
  -moz-letter-spacing: 10px;
  -ms-letter-spacing: 10px;
  letter-spacing: 10px;
  color: white;
  z-index: 3;
  position: absolute;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
  transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
}

.emotion-4 .accent {
  -webkit-perspective: 400px;
  -moz-perspective: 400px;
  -ms-perspective: 400px;
  perspective: 400px;
  position: absolute;
  opacity: 0;
  z-index: 3;
  border: 2px solid white;
  width: 100%;
  height: 100%;
  margin: 0;
  background: rgba(255,255,255,0);
  -webkit-transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
  transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
}

.emotion-4:hover {
  background: linear-gradient( 224.01deg,rgba(255,255,255,0) 12.8%,rgba(255,255,255,0.2) 46.35%,rgba(255,255,255,0) 88.7% ),#232729;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.emotion-4:hover img {
  opacity: 0.6;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.emotion-4:hover .accent,
.emotion-4:hover .label {
  opacity: 1;
}

.emotion-4:hover .accent {
  z-index: 3;
  background: rgba(255,255,255,0.4);
  margin-top: 40px;
  margin-left: 40px;
}

.emotion-4 img {
  max-width: 686px;
  height: 363px;
}

.emotion-4 .label {
  position: absolute;
  left: 50%;
  top: 50%;
  text-align: center;
}

.emotion-6 {
  margin-left: -786px;
}

.emotion-6 img {
  position: absolute;
  left: 0;
  top: 0;
}

.emotion-6 .figma-logo {
  left: -50px;
  top: 126px;
  margin-top: 400px;
}

.emotion-6 .storybook-logo {
  left: 316px;
  top: 451px;
  z-index: 1;
}

.emotion-6 .react-logo {
  padding-left: 695px;
  margin-top: -85px;
}

.emotion-8 {
  margin-left: -786px;
  position: absolute;
  margin-left: -120px;
}

.emotion-8 img {
  position: absolute;
  left: 0;
  top: 0;
}

.emotion-8 .figma-logo {
  left: -50px;
  top: 126px;
  margin-top: 400px;
}

.emotion-8 .storybook-logo {
  left: 316px;
  top: 451px;
  z-index: 1;
}

.emotion-8 .react-logo {
  padding-left: 695px;
  margin-top: -85px;
}

.emotion-14 {
  margin-left: -786px;
}

.emotion-14 img {
  position: absolute;
  left: 0;
  top: 0;
}

.emotion-14 .figma-logo {
  left: -50px;
  top: 126px;
  margin-top: 400px;
}

.emotion-14 .storybook-logo {
  left: 316px;
  top: 451px;
  z-index: 1;
}

.emotion-14 .react-logo {
  padding-left: 695px;
  margin-top: -85px;
}

@media (max-width:1200px) {
  .emotion-14 {
    opacity: 0;
  }
}

@media (min-width:1200px) {
  .emotion-14 {
    position: absolute;
    left: 0;
    right: 0;
    top: auto;
    margin-top: 300px;
    z-index: 0;
  }

  .emotion-14 img.white-wash {
    width: 100%;
  }
}

.emotion-18 {
  min-height: 1800px;
}

<div
  className="emotion-18 emotion-19"
>
  <div
    className="emotion-16 emotion-17"
  >
    <section
      className="emotion-2 emotion-3"
    >
      <h3
        className="emotion-0 emotion-1"
      >
        These days I use Figma and React, backed by Storybook to build visual libraries of components that can be tested and regressed automatically.
      </h3>
    </section>
    <section
      className="emotion-12 emotion-13"
    >
      <div
        className="emotion-10 emotion-11"
      >
        <div
          className="emotion-4 emotion-5"
          label-width={300}
          offset={
            Object {
              "x": 40,
              "y": 40,
            }
          }
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "transform": "",
            }
          }
        >
          <div
            className="label"
            style={
              Object {
                "transform": " translate(-50%, -50%)",
              }
            }
          >
            Check out my UI workbench
          </div>
          <a
            className="accent"
            href="https://drdyne.github.io/ui-workbench/"
            style={
              Object {
                "transform": "",
              }
            }
            target="_blank"
          />
          <img
            src={Object {}}
          />
        </div>
        <div
          className="emotion-6 emotion-7"
        >
          <img
            className="storybook-logo"
            src={Object {}}
          />
          <img
            className="react-logo"
            src={Object {}}
          />
        </div>
        <div
          className="emotion-8 emotion-7"
          data-rellax-speed={4}
          figma="true"
        >
          <img
            className="figma-logo"
            src={Object {}}
          />
        </div>
      </div>
    </section>
    <div
      className="emotion-14 emotion-7"
      data-rellax-speed={-5}
      wash="true"
    >
      <img
        className="white-wash"
        src={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`UI-WORKBENCH Portfolio|Pages page 3 1`] = `
.emotion-0 {
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 28px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  color: #000;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  z-index: 1;
}

.emotion-12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background: #4176FB;
  min-height: 900px;
}

.emotion-12 .emotion-1 {
  color: #fff;
  max-width: 290px;
  margin-top: 240px;
  margin: 240px 0 0 94px;
  z-index: 1;
}

.emotion-8 {
  width: 100%;
  margin-top: 240px;
  margin-left: auto;
  margin-bottom: 500px;
}

@media (max-width:1200px) {
  .emotion-8 {
    padding-bottom: 200px;
  }
}

.emotion-4 {
  -webkit-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
  position: relative;
  display: block;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.25);
  -webkit-perspective: 20px;
  -moz-perspective: 20px;
  -ms-perspective: 20px;
  perspective: 20px;
  z-index: 2;
  margin: 0 0 0 auto;
  height: 437px;
  width: 900px;
}

.emotion-4 img {
  width: 100%;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-4 .label {
  font-family: Encode Sans;
  font-size: 28px;
  font-weight: bold;
  -webkit-letter-spacing: 10px;
  -moz-letter-spacing: 10px;
  -ms-letter-spacing: 10px;
  letter-spacing: 10px;
  color: white;
  z-index: 3;
  position: absolute;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
  transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
}

.emotion-4 .accent {
  -webkit-perspective: 400px;
  -moz-perspective: 400px;
  -ms-perspective: 400px;
  perspective: 400px;
  position: absolute;
  opacity: 0;
  z-index: 3;
  border: 2px solid white;
  width: 100%;
  height: 100%;
  margin: 0;
  background: rgba(255,255,255,0);
  -webkit-transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
  transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
}

.emotion-4:hover {
  background: linear-gradient( 224.01deg,rgba(255,255,255,0) 12.8%,rgba(255,255,255,0.2) 46.35%,rgba(255,255,255,0) 88.7% ),#232729;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.emotion-4:hover img {
  opacity: 0.6;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.emotion-4:hover .accent,
.emotion-4:hover .label {
  opacity: 1;
}

.emotion-4:hover .accent {
  z-index: 3;
  background: rgba(255,255,255,0.4);
  margin-top: 0px;
  margin-left: 0px;
}

.emotion-4 .label {
  margin-right: 50px;
  right: 0;
  text-align: right;
}

.emotion-4:hover .label {
  margin-right: 20px;
}

.emotion-4:hover .accent {
  margin-top: 35px;
  margin-left: -35px;
}

.emotion-6 {
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  top: auto;
  z-index: 0;
  margin-left: -384px;
}

.emotion-6 img {
  width: 100%;
}

@media (max-width:1200px) {
  .emotion-6 {
    opacity: 0;
  }
}

.emotion-14 {
  min-height: 1800px;
}

<div
  className="emotion-14 emotion-15"
>
  <div
    className="emotion-12 emotion-13"
  >
    <section
      className="emotion-2 emotion-3"
    >
      <h3
        className="emotion-0 emotion-1"
      >
        I strive to build tools that help people achieve objectives or visualize their progress, make them work faster, or simply improve their quality of life.
      </h3>
    </section>
    <section
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "transform": "",
            }
          }
        >
          <div
            className="label"
            style={
              Object {
                "transform": "",
              }
            }
          >
            <span>
              Some crazy
              <br />
              ideas
            </span>
          </div>
          <a
            className="accent"
            href="https://www.behance.net/rchaumard25b7"
            style={
              Object {
                "transform": "",
              }
            }
            target="_blank"
          />
          <img
            src={Object {}}
          />
        </div>
        <div
          className="emotion-6 emotion-7"
          data-rellax-speed={-2}
        >
          <img
            src={Object {}}
          />
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`UI-WORKBENCH Portfolio|Pages page 4 1`] = `
.emotion-0 {
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 28px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  color: #000;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background: #fff;
  min-height: 900px;
  z-index: 3;
}

.emotion-6 .emotion-1 {
  color: #fff;
  max-width: 290px;
  margin-top: 240px;
  margin: 240px 0 0 94px;
  z-index: 1;
}

.emotion-6 .bg {
  display: block;
  width: 100%;
  height: auto;
  margin-top: -174px;
  margin-bottom: -5px;
}

.emotion-6 [data-rellax-speed] {
  width: 100%;
}

.emotion-6 div img {
  margin-top: 150px;
  width: 100%;
}

.emotion-6 .emotion-1 {
  width: 100%;
  max-width: 800px;
  text-align: center;
  margin: -172px auto 0 auto;
  padding: 50px;
  background: rgba(0,0,0,0.33);
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-4 {
  -webkit-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
  position: relative;
  display: block;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.25);
  -webkit-perspective: 20px;
  -moz-perspective: 20px;
  -ms-perspective: 20px;
  perspective: 20px;
  height: 209px;
  max-width: 600px;
  margin: 0 auto;
  padding: 2em;
}

.emotion-4 img {
  width: 100%;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-4 .label {
  font-family: Encode Sans;
  font-size: 28px;
  font-weight: bold;
  -webkit-letter-spacing: 10px;
  -moz-letter-spacing: 10px;
  -ms-letter-spacing: 10px;
  letter-spacing: 10px;
  color: white;
  z-index: 3;
  position: absolute;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
  transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
}

.emotion-4 .accent {
  -webkit-perspective: 400px;
  -moz-perspective: 400px;
  -ms-perspective: 400px;
  perspective: 400px;
  position: absolute;
  opacity: 0;
  z-index: 3;
  border: 2px solid white;
  width: 100%;
  height: 100%;
  margin: 0;
  background: rgba(255,255,255,0);
  -webkit-transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
  transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
}

.emotion-4:hover {
  background: linear-gradient( 224.01deg,rgba(255,255,255,0) 12.8%,rgba(255,255,255,0.2) 46.35%,rgba(255,255,255,0) 88.7% ),#232729;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.emotion-4:hover img {
  opacity: 0.6;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.emotion-4:hover .accent,
.emotion-4:hover .label {
  opacity: 1;
}

.emotion-4:hover .accent {
  z-index: 3;
  background: rgba(255,255,255,0.4);
  margin-top: 0px;
  margin-left: 0px;
}

.emotion-4 .label {
  margin-top: 20px;
  margin-left: 75px;
  opacity: 1;
  color: #232729;
}

.emotion-4:hover .label {
  margin-top: 50px;
  margin-left: 75px;
  color: white;
}

.emotion-4:hover .accent {
  margin-top: -75px;
  margin-left: 25px;
}

.emotion-8 {
  min-height: 1800px;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="emotion-6 emotion-7"
  >
    <h3
      className="emotion-0 emotion-1"
    >
      When I’m not coding, I can be found sketching, exploring art, design, motion or gaming.
    </h3>
    <div
      data-rellax-speed={2}
    >
      <div
        className="emotion-2 emotion-3"
      >
        <img
          src={Object {}}
        />
      </div>
      <div
        className="emotion-4 emotion-5"
        offset={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        style={
          Object {
            "transform": " translate(0, -25px)",
          }
        }
      >
        <div
          className="label"
          style={
            Object {
              "transform": "",
            }
          }
        >
          <span>
            Have a look at
            <br />
            some of my
            <br />
            sketches
          </span>
        </div>
        <a
          className="accent"
          href="https://dr-dyne.tumblr.com/tagged/sketch"
          style={
            Object {
              "transform": "",
            }
          }
          target="_blank"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`UI-WORKBENCH Portfolio|Pages page 5 1`] = `
.emotion-0 {
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 28px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  color: #000;
}

.emotion-8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background: #fff;
  min-height: 900px;
}

.emotion-8 .emotion-1 {
  color: #000;
  max-width: 290px;
  margin-top: 240px;
  margin: 240px 0 0 94px;
  z-index: 1;
}

.emotion-8 .emotion-1 {
  max-width: 1200px;
  color: #9EC4E7;
  margin: 0 auto;
  padding: 100px 100px 20px 100px;
  z-index: 3;
  text-align: center;
}

.emotion-6 {
  width: 100%;
  background: #9EC4E7;
  background-opacity: 0.4;
}

.emotion-2 {
  -webkit-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
  position: relative;
  display: block;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  box-shadow: 0px 8px 16px rgba(0,0,0,0.25);
  -webkit-perspective: 20px;
  -moz-perspective: 20px;
  -ms-perspective: 20px;
  perspective: 20px;
  width: 876px;
  height: 493px;
  margin: 100px auto;
}

.emotion-2 img {
  width: 100%;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-2 .label {
  font-family: Encode Sans;
  font-size: 28px;
  font-weight: bold;
  -webkit-letter-spacing: 10px;
  -moz-letter-spacing: 10px;
  -ms-letter-spacing: 10px;
  letter-spacing: 10px;
  color: white;
  z-index: 3;
  position: absolute;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
  transition: opacity 0.2s ease-in,margin 0.2s ease-in 0s;
}

.emotion-2 .accent {
  -webkit-perspective: 400px;
  -moz-perspective: 400px;
  -ms-perspective: 400px;
  perspective: 400px;
  position: absolute;
  opacity: 0;
  z-index: 3;
  border: 2px solid white;
  width: 100%;
  height: 100%;
  margin: 0;
  background: rgba(255,255,255,0);
  -webkit-transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
  transition: all 0.2s ease-out,margin 0.2s ease-out,opacity 0.4s ease-out,background 0.2s ease-out;
}

.emotion-2:hover {
  background: linear-gradient( 224.01deg,rgba(255,255,255,0) 12.8%,rgba(255,255,255,0.2) 46.35%,rgba(255,255,255,0) 88.7% ),#232729;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.emotion-2:hover img {
  opacity: 0.6;
  -webkit-transform: scale(0.98);
  -ms-transform: scale(0.98);
  transform: scale(0.98);
}

.emotion-2:hover .accent,
.emotion-2:hover .label {
  opacity: 1;
}

.emotion-2:hover .accent {
  z-index: 3;
  background: rgba(255,255,255,0.4);
  margin-top: 0px;
  margin-left: 0px;
}

.emotion-2 .label {
  text-align: center;
  top: 50%;
  left: 50%;
}

.emotion-10 {
  min-height: 1800px;
}

<div
  className="emotion-10 emotion-11"
>
  <div
    className="emotion-8 emotion-9"
  >
    <h3
      className="emotion-0 emotion-1"
    >
      Most of my experience is based on secure, enterprise-level, innovative web apps, with optimized bundling and offline support, developed and tested by small teams and released in fast iteration cycles through a solid CI pipeline to a wide array of devices.
    </h3>
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-4 emotion-5"
      >
        <div
          className="emotion-2 emotion-3"
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "transform": "",
            }
          }
        >
          <div
            className="label"
            style={
              Object {
                "transform": "translate(-50%, -50%)",
              }
            }
          >
            <span>
              Download my
              <br />
              resume
            </span>
          </div>
          <a
            className="accent"
            href="https://github.com/DrDyne/ui-workbench/raw/master/src/pages/assets/resume%20anon.png"
            style={
              Object {
                "transform": "",
              }
            }
            target="_blank"
          />
          <img
            src={Object {}}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UI-WORKBENCH Portfolio|Pages page 6 1`] = `
.emotion-0 {
  font-family: Encode Sans;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 28px;
  -webkit-letter-spacing: 0.15em;
  -moz-letter-spacing: 0.15em;
  -ms-letter-spacing: 0.15em;
  letter-spacing: 0.15em;
  color: #000;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  background: #fff;
  min-height: 900px;
  position: relative;
  overflow: hidden;
}

.emotion-4 .emotion-1 {
  color: #000;
  max-width: 290px;
  margin-top: 240px;
  margin: 240px 0 0 94px;
  z-index: 1;
}

.emotion-4 .tooltip-box {
  z-index: 1;
  position: absolute;
  width: 750px;
  height: 207px;
  bottom: 300px;
  margin-left: 50px;
}

.emotion-4 .bg {
  margin-bottom: -5px;
  display: block;
  height: 100%;
  width: 100%;
}

.emotion-4 .bg > img {
  width: 100%;
  min-height: 900px;
}

.emotion-4 .bg .contact-line {
  position: absolute;
  right: 50px;
  bottom: 50px;
}

.emotion-2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  min-height: 100px;
}

.emotion-2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 .tooltip-label {
  position: absolute;
  -webkit-transform: translate(0,150%);
  -ms-transform: translate(0,150%);
  transform: translate(0,150%);
  width: 100%;
  text-align: center;
  z-index: 2;
  margin-left: -18px;
}

.emotion-2 .tooltip-label h3 {
  display: inline;
  margin: 0 auto;
  padding: 0;
}

.emotion-2 img {
  z-index: 1;
  position: absolute;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

.emotion-2 .tooltip-accent {
  margin-top: -3px;
  margin-left: -16px;
}

.emotion-2:hover .tooltip-accent {
  -webkit-filter: drop-shadow(8px 8px 10px white);
  -webkit-filter: drop-shadow(8px 8px 10px white);
  filter: drop-shadow(8px 8px 10px white);
}

.emotion-6 {
  min-height: 1800px;
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="bg"
    >
      <img
        src={Object {}}
      />
      <div
        className="contact-line"
      >
        <img
          src={Object {}}
        />
      </div>
    </div>
    <div
      className="tooltip-box"
    >
      <div
        className="emotion-2 emotion-3"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        origin={
          Object {
            "x": 0,
            "y": 0,
          }
        }
      >
        <a
          className="tooltip-label"
          href="mailto:r.chaumard@gmail.com?subject=UX Engineer&body=Hi remy,"
          target="_blank"
        >
          <h3
            className="emotion-0 emotion-1"
          >
            Sounds interesting? Drop me a line.
          </h3>
        </a>
        <img
          className="tooltip-accent"
          src={Object {}}
          style={
            Object {
              "transform": "translate(0px, 0px)",
            }
          }
        />
        <img
          className="tooltip-bg"
          src={Object {}}
          style={
            Object {
              "transform": "rotateX(NaNdeg) rotateY(NaNdeg)",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
